# GatewayServer

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: cmake.yml
env/common/: Dockerfile  script.sh
env/pg/: configure.sh
env/server/: Dockerfile  script.sh
src/app/gateway/: CMakeLists.txt  ConsoleParams.h  main.cpp
src/sdk/: CMakeLists.txt
src/sdk/channels/: Channel.cpp
src/sdk/common/log/: Logger.cpp
src/sdk/database/: IDatabase.h  Settings.h  Storage.cpp  Storage.h  WrapperPg.cpp  WrapperPg.h
src/sdk/network/session/: ClientSession.cpp
test/: CMakeLists.txt
tools/: pgadmin.sh
